# Movie_Rec_Agent

./: .env.example  .gitignore  ENGINEERING_DESIGN.md  PROJECT_REPORT.md  README.md  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: __init__.py  agent.py
agent/config/: agent_config.py  loader.py
agent/multi_agent/: __init__.py  coordinator.py  master_agent.py  react_loop.py  recommend_agent.py  search_agent.py  summary_agent.py
api/: exceptions.py  main.py
configs/: config.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue
llm/: llm_router.py  response_generator.py
scripts/: import_movielens_data.py  test_imdb_api.py  view_database.py
services/: __init__.py  circuit_breaker.py  imdb_api.py
services/abtest/: abtest_service.py
services/auth/: jwt_auth.py
services/cache/: __init__.py  redis_cache.py
services/dialogue/: __init__.py  dialogue_history.py
services/evaluation/: __init__.py  online_metrics.py
services/feedback/: __init__.py  feedback_service.py
services/integration/: __init__.py  trad_rec_client.py
services/memory/: __init__.py  memory_bank.py
services/metrics/: prometheus.py
services/middleware/: rate_limiter.py
services/queue/: __init__.py  task_queue.py  workers.py
services/recommendation/: __init__.py  engine_adapter.py
skills/: __init__.py  base.py
tests/: conftest.py  test_agent_e2e.py  test_circuit_breaker.py  test_conversation_skill.py  test_coordinator.py  test_engine_adapter.py  test_exceptions.py  test_llm_router.py  test_memory_bank.py  test_search_skill.py  test_task_queue.py  test_tracing.py  test_trad_rec_client.py
(+15 files in other folders)
