[project]
name = "movie-rec-agent"
version = "0.1.0"
description = "智能电影推荐 Agent - 基于 LLM + LangChain + RAG + 推荐算法"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Web 框架
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # LangChain 生态
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.10",
    "langgraph>=0.0.20",
    
    # 数据库
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    
    # 向量数据库 (MVP 使用 FAISS，后续可迁移到 Milvus)
    "faiss-cpu>=1.7.4",
    
    # 推荐系统依赖 (复用现有)
    "numpy>=1.24.0",
    "tensorflow>=2.15.0",
    "scikit-learn>=1.3.0",
    
    # HTTP 客户端
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    
    # JWT 认证
    "python-jose[cryptography]>=3.3.0",
    
    # Prometheus 指标
    "prometheus-client>=0.19.0",
    
    # 工具库
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "tenacity>=8.2.0",
    "python-multipart>=0.0.6",
    
    # 测试
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
